# CUDA_practices

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  hello_cuda.cu  pyproject.toml  test.py
cuda_src/: README.md  cuda_print_grid.cu  cuda_runtime_api.cu  py_vec_add.cu
scripts/: find_optimal_grid_config.py
