[project]
name = "cuda-parallel-programming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "pybind11>=2.13.6",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "isort>=5.13.2",
]
